--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,9 @@ name = "kin"
 version = "0.1.0"
 edition = "2021"
 
+
+[lib]
+crate-type = ["cdylib", "lib"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
@@ -12,4 +15,8 @@ anyhow = { version = "*" }
 thiserror = "*"
 dot = "*"
 indexmap = "*"
-itertools= "*"
+itertools = "*"
+wasm-bindgen = "0.2.87"
+getrandom = { version = "0.2", features = ["js"] }
+serde = { version = "1.0.188", features = ["derive"] }
+serde_json = "1.0.107"
