--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,5 @@ wasm-bindgen = "0.2.87"
 getrandom = { version = "0.2", features = ["js"] }
 serde = { version = "1.0.188", features = ["derive"] }
 serde_json = "1.0.107"
+tracing = "0.1.40"
+tracing-subscriber = "0.3.18"
